--- a/creditsea-frontend/package.json
+++ b/creditsea-frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.4",
+    "@mui/lab": "^7.0.0-beta.10",
     "@mui/material": "^5.15.4",
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
